--- a/src/Microsoft.AspNetCore.WebPages/project.json
+++ b/src/Microsoft.AspNetCore.WebPages/project.json
@@ -1,6 +1,10 @@
 ﻿{
+  "version": "1.0.0-*",
+
   "dependencies": {
-    "Microsoft.AspNetCore.Razor.Runtime": "1.0.0-*"
+    "Microsoft.AspNetCore.Hosting.Abstractions": "1.0.0-*",
+    "Microsoft.AspNetCore.Razor.Runtime": "1.0.0-*",
+    "Microsoft.AspNetCore.Routing": "1.0.0-*"
   },
 
   "frameworks": {
